2002-08-27  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c, src/gerbv_screen.h, src/gerbv_icon.h: Calculate
	  proper initial translation when doing autoscale. Center image.
	  Added #define for extra 0.1 inches in autoscale. New icon image.
	  Also added outline debugging code (within #ifdef's).

2002-08-27  Andreas Andersson  <e92_aan@e.kth.se>

	* src/drill.c: Minor change to the drill file format guessing
	  logic to allow for yet another special case.

2002-08-27  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Fixed a couple of minor memoryleaks in color
	  allocation with valgrind after a tips from Anthony J Bybell.

2002-08-10  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c, src/Makefile.am, files2tag.txt modified, 
	  src/scm_gerber.[hc] removed, src/batch.[hc] added: 
	  All batch functionality broken out to one place, ie batch.[hc].

2002-08-09  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Removed two lines causing zoom to stop work
	  when a non-loaded layer recently had been selected or deselected.
	  I didn't find a reason for these two lines to be there. Maybe
	  there was... Closes bug 593109.
	* src/gerbv.c, src/gerbv_screen.h, man/gerbv.1.in: Added 
	  activation/deactivation via the keyboard. Closes feature request
	  593104. Also updated the man page with this info and fixed other
	  minor stuff.

2002-08-04  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c, src/gerbv_screen.h: Added superimposing selectable
	  function to be used when you put "layer upon layer". I call it
	  superimposing functions. Hope it's correct english.
	* man/gerbv.1.in: Minor layout changes and added part on superimposing
	  functions.
	* src/gerbv.c: Fixed GTK asserts popping up when starting gerbv
	  without any files loaded.

2002-08-01  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.[hc], src/gerbv.c: Changed how layers are created and
	  stored to be able to be displayed on top of each other. This