@@ -1,3 +1,8 @@
+2002-08-31  Anders Eriksson  <anders@umunet.org>
+
+	* src/gerbv.c (redraw_pixmap): Removed redundant bounding
+	  box calculation.
+
 2002-08-27  Anders Eriksson  <anders@umunet.org>
 
 	* src/gerbv.c, src/gerbv_screen.h, src/gerbv_icon.h: Calculate
